aggiustato updateround()